2002-02-05  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.cyg config/makefile.mgw: Add -DHAVE_ATEXIT.

2002-02-04  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	Patch from Levente Novak <lnovak@dragon.klte.hu>, edited by me:

	* term/tgif.trm (TGIF_filled_polygon): Break long TGIF command
 	into several lines to not overflow limits imposed by programs
 	reading this format.  
	
	* term/tgif.trm (TGIF_make_palette, TGIF_set_color,
 	TGIF_filled_polygon): Codesyle fixes.  Function definitions are
 	supposed to be in K&R, not ANSI C style.  Plus some whitespace and
 	indentation fixes.

2002-02-04  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* src/plot.c, src/stdfn.h, term/x11.trm: Clean up atextit() handling.

	* src/specfun.c: More meaningful error messages for removed functions.

2002-02-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/graph3d.c: For 'splot ... with ... palette', draw key as a line
	or point/dot sequence with a color gradient.

2002-02-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS docs/gnuplot.doc src/gadgets.h src/gadgets.c src/plot2d.c
	src/plot3d.c src/save.c src/set.c src/show.c src/tables.h src/tables.c
	src/unset.c: New option 'set key {no}enhanced'.

	* term/post.trm: Add label "?enhanced postscript".

2002-02-01  Petr Mikulik  <mikulik@physics.muni.cz>

	* demo/pm3d.dem: Remove warning that pm3d works on some terminals
	only.

	* docs/gnuplot.doc: Minor fixes.

2002-02-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/hidden3d.c (draw_line_hidden): Changed local variables
 	vstore1 and vstore2 from pointers to indices, to avoid yet another
 	dangling pointer problem caused by realloc() happening at a time I
 	hadn't expected.

2002-02-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/README: Corrected type of last argument of term->arrow()
	Re-indented a bit.
	
2001-02-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
